# cofifi_bot

./: .env  cofifi.db  pyproject.toml
.claude/: settings.local.json
src/cofifi_vend_bot/: bot.py  config.py  database.py  keyboard.py  states.py
src/cofifi_vend_bot/handlers/: feedback.py  refund.py  start.py
