[project]
name = "cofifi-vend-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Maks Nemkov",email = "maksim.nemkov.ldt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "cofifi_vend_bot", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
